--- a/index.html
+++ b/index.html
@@ -4,15 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Calculator</title>
+    <title>Note App</title>
   </head>
   <body>
-    <div class="historyContainer">
-      <div id="history" class="history"></div>
-    </div>
-    <div>
+    <div class="noteApp">
+      <div class="sidebar">
+        <button class="createNote" onclick="createNewNote()">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+          Create new note
+        </button>
+
+        <div class="noteCard">
+          <div class="cardHeader">Dings</div>
+          <div class="cardText">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          </div>
+          <div class="cardDate">11.11.2023, 19:30</div>
+        </div>
+      </div>
+      <div class="mainContent">
+        <div class="titleAndButtons">
+          <input
+            class="header"
+            type="text"
+            id="inputHeader"
+            placeholder="Enter your header here"
+          />
+
+          <button class="saveNote" onclick="saveCurrentInput()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 3.75H6.912a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H15M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859M12 3v8.25m0 0l-3-3m3 3l3-3"
+              />
+            </svg>
+          </button>
+          <button class="deleteNote">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+              />
+            </svg>
+          </button>
+        </div>
+
+        <textarea
+          name="inputArea"
+          id="inputTextArea"
+          placeholder="Please enter your note here"
+        ></textarea>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
